html structure updated

--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Rotated Navigation</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="menu-logos">
+            <div class="bar active"></div>
+            <div class="cross inactive"></div>
+        </div>
+        <ul>
+            <li><span>LogoHere</span>home</li>
+            <li><span>LogoHere</span>about</li>
+            <li><span>LogoHere</span>contact</li>
+        </ul>
+    </nav>
+    <main class="container">
+        <div class="article">
+            <h2>Welcome to NHK</h2>
+            <sub>Irfan Lone</sub>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis error cumque sit esse corporis omnis fuga adipisci praesentium! Eos quas enim harum facilis quisquam dicta explicabo. Veritatis eveniet quidem quo error minus obcaecati ratione dignissimos quis sunt praesentium tempora quae, dolores pariatur! Temporibus beatae illum nulla rerum amet neque perferendis laudantium dicta, hic commodi quas accusantium exercitationem, praesentium, modi voluptatum quod sed pariatur dolorem ipsum doloribus perspiciatis? Repellat tenetur ex rem placeat, quaerat rerum soluta reiciendis. Sequi, magnam odio repellat cumque nostrum nisi delectus praesentium illo nobis vel exercitationem deserunt ad, magni libero corrupti, quia voluptates. Esse, iure sequi officia molestiae quibusdam nisi expedita earum quae voluptates fuga aliquam ea veniam. Atque, nobis ex? At, maxime quas, architecto corporis soluta, reprehenderit dolorem deserunt aperiam possimus dolorum mollitia amet optio quia quidem aspernatur nam excepturi! Incidunt rerum animi dolores non quis vero nisi quas, dolorum facere blanditiis itaque illo saepe at!</p>
+            <h3>Character here</h3>
+            <img src="./images/ezgif.com-optijpeg (5).jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, illum dolor excepturi aut dolorum nesciunt hic? Unde eligendi, nisi adipisci aspernatur quis soluta sint eaque modi distinctio. Soluta animi facere tempore ipsam, dolor quibusdam ipsa. Minus dignissimos fugiat perspiciatis maxime dolor quam eum nihil neque reprehenderit voluptas libero atque, mollitia quidem suscipit incidunt laboriosam nostrum fuga debitis architecto tempore odio ducimus rem blanditiis? Quia quo non itaque vitae velit illo veniam suscipit pariatur cum ipsum?</p>
+        </div>
+        
+    </main>
 </body>
 </html>
